# FrequentPatternMining

./: .gitignore  CMakeLists.txt  README.md
docs/: Report.md
scripts/: tests-runner.sh
src/: FPTreeManager.cpp  FPTreeManager.h  FPTreeNode.cpp  FPTreeNode.h  FileOrderedReader.cpp  FileOrderedReader.h  FrequentItemsets.cpp  FrequentItemsets.h  HeaderEntry.cpp  HeaderEntry.h  HeaderTable.cpp  HeaderTable.h  Log.h  Params.h  Utils.cpp  main.cpp
